# neurollm

./: .gitignore  README.md  kewr_config.yaml  label_ners.sh  pyproject.toml
notebooks/: create-data-to-label.py  create_cls_data_for_labelling.py  create_comparisons.py  create_ner_data.py  create_ner_fine_tune_data.py  create_pros_kch_data.py  create_prospective_data.py  create_seg_data.py  evaluate_cls.py  evalutate_segmentation.py  extract_domains.py  make_neg_data_for_labelling.py  mask_domains.py  ner_domain_evaluation.py  ner_extract_errors.py  test_cls.py  test_neg.py  test_ner.py  test_seg.py  test_trauma_errors.py
src/neurollm/: __about__.py  preprocess_cls_data.py  preprocess_neg_data.py  preprocess_ner_data.py  preprocess_seg_data.py  train_cls.py  train_neg.py  train_ner.py  train_segmentation.py  utils.py
tests/: test_utils.py
